kube/home/networking/envoy-gateway/canary-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-gateway-canary
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-gateway-canary
  template:
    metadata:
      labels:
        app: envoy-gateway-canary
    spec:
      containers:
        - name: echo
          image: registry.k8s.io/gateway-api/echo-basic:v1.5.1
          ports:
            - containerPort: 3000
