kube/home/networking/envoy-gateway/canary-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway-canary
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: envoy-gateway-canary
  ports:
    - name: http
      port: 80
      targetPort: 3000
