kube/home/networking/envoy-gateway/external-gw-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gw
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    external-dns.alpha.kubernetes.io/target: gw.it.cianfr.one
spec:
  gatewayClassName: envoy
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: external-gw
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: cianfr.one-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
