kube/home/networking/envoy-gateway/canary-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-gateway-canary
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  parentRefs:
    - name: external-gw
      sectionName: https
  hostnames:
    - canary.cianfr.one
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: envoy-gateway-canary
          port: 80
